--- a/index.html
+++ b/index.html
@@ -52,15 +52,34 @@
 					<img src="images/T.E.D 2K18 RUSA-01.png" alt="Rusa" style="width:350px;height:350px;" data-scroll-reveal="enter top and move 50px over 1.8s"> <br> <br>
                     <h2 data-scroll-reveal="enter top and move 50px over 1.2s"> Coming Soon </h2>
 					<h5 data-scroll-reveal="enter bottom and move 50px over 1.4s">
-                       TECH ENTUSHIAST DAY </h5>
+                       TECH ENTUSHIAST DAY 2018</h5>
                     <br />
                     <p data-scroll-reveal="enter bottom and move 50px over 1.4s">
-                        Tech Entushiast Day (TED) merupakan sebuah event Tech Entushiast Day merupakan sebuah event Tech Entushiast Day merupakan sebuah event Tech Entushiast Day merupakan sebuah event
+                        T.E.D merupakan acara tahunan yang diselenggarakan oleh divisi IPTEK, Keluarga Mahasiswa Teknik Elektro dan Informatika (KMTEDI), Sekolah Vokasi, UGM.
                     </p> 
                 </div>
                 <!-- Main Heading Ends -->
                 <!-- Services List Starts -->
                 <div id="services-blocks" class="row">
+                    <div data-scroll-reveal="enter bottom and move 50px over 1.6s" class="col-lg-6 col-md-6 col-sm-12 col-xs-12 sblock">
+                        <span class="fa fa-star-o"></span>
+                        <h4>
+                            TED 2018</h4>
+                       <p align="justify">
+                            &nbsp &nbsp Setelah sebelumnya berhasil menyelenggarakan NCCF (Nerd Corner Competition and Fair), tahun ini KMTEDI akan menyelenggarakan acara serupa bernama T.E.D. <br><br>
+							&nbsp &nbsp T.E.D merupakan acara tahunan yang diselenggarakan oleh divisi IPTEK, Keluarga Mahasiswa Teknik Elektro dan Informatika (KMTEDI), Sekolah Vokasi, UGM. Acara ini akan diselenggarakan dengan beberapa perlombaan di bidang teknologi (line followers, sumo robotics, dan science technology exhibition)<br>
+                        </p>
+                    </div>
+                    <div data-scroll-reveal="enter bottom and move 50px over 1.6s" class="col-lg-6 col-md-6 col-sm-12 col-xs-12 sblock">
+                        <span class="fa fa-star-o"></span>
+                        <h4>
+                            Science Project TED Competition</h4>
+                       <p align="justify">
+                            &nbsp &nbsp Science and Technology Project Competition adalah kompetisi penciptaan karya inovatif berupa teknologi dalam bentuk hardware dan atau software yang mana karya tersebut diharapkan dapat menjadi solusi terhadap permasalahan yang ada di Indonesia. <br><br>
+							&nbsp &nbsp Kompetisi ini ditujukan untuk Mahasiswa dan umum dari seluruh Indonesia. Kompetisi ini memiliki konsep exhibition sehingga pada saat pelaksanaannya akan ada pengunjung yang dapat melihat karya-karya dan berinteraksi langsung dengan peserta. <br><br>
+							&nbsp &nbsp Pada kompetisi ini nantinya akan dipilih 10 peserta terbaik untuk memasuki babak final. Di babak final peserta akan mempresentasikan karya mereka dihadapan juri dan juga pengunjung.<br>
+                        </p>
+                    </div>
                     <div data-scroll-reveal="enter bottom and move 50px over 1.6s" class="col-lg-6 col-md-6 col-sm-12 col-xs-12 sblock">
                         <span class="fa fa-star-o"></span>
                         <h4>
@@ -81,6 +100,7 @@
 							&nbsp &nbsp Pada kompetisi ini, semua tim akan melakukan tahap penyisihan hingga final selama 2 hari di UGM dan akan diambil 3 tim terbaik serta 1 kategori best design untuk diumumkan pada rangkaian acara penutupan TED 2018, hari Minggu.
                         </p>
                     </div>
+                    
                  
                 </div>
                 <!-- Services List Ends -->
